[package]
name = "semacaulk-precompute-updater"
version = "0.1.0"
edition = "2021"


[dependencies]
semacaulk = { git = "https://github.com/geometryresearch/semacaulk", rev = "c3b719f8bcbf02d09a420db61232e04d8172d2e9" }
tokio = { version = "1.22.0", features = ["macros"] }
sqlx = { version = "0.6", features = [ "runtime-tokio", "sqlite" ] }

#[dev-dependencies]

[[bin]]
edition = "2021"
name = "updater"
path = "src/bin/updater.rs"
